--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Ascacou",
   "version": "0.0.1",
   "description": "A brain teaser game with Electron",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
-    "start": "electron main.js"
+    "start": "electron app.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/buonOmo/ascacou#readme",
   "devDependencies": {
     "electron-prebuilt": "^1.2.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "jquery": "^2.2.4"
   }
 }
